<resources>
    <string name="app_name">二手市场</string>
    <string name="action_settings">Settings</string>
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>


    <string name="prompt_email">输入用户名</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>

    <string name="action_register">注册</string>
    <string name="action_resetting">重置</string>
    <string name="action_concel">取消</string>
    <string name="prompt_username">输入用户名</string>
    <string name="prompt_setpassword">输入密码</string>
    <string name="prompt_password_again">确认密码</string>
</resources>
